import 'package:pass_emploi_app/models/brand.dart';
import 'package:pass_emploi_app/ui/immersion_contacts_strings.dart';
import 'package:pass_emploi_app/utils/date_extensions.dart';

class _PassEmploiStrings {
  static String appName = "pass emploi";
  static String logoDescription = "Pass emploi";
  static String shouldInformConseiller =
      "En cas d’imprévu, il est important de prévenir votre conseiller. Vous pouvez le contacter via la messagerie de l’application pass emploi.";
  static String suppressionAccountLabel = "Supprimer mon compte de l’application pass emploi";
  static String warningInformationParagraph1 =
      "En supprimant votre compte de l’application pass emploi, vous perdrez définitivement toutes les données présentes sur l’application :";
...
  static String copie = "Copié";
  static String notConnected = "Vous êtes hors connexion";
  static const String mandatoryFields = "Les champs marqués d’une * sont obligatoires.";
  static const String allMandatoryFields = "Tous les champs sont obligatoires.";
  static String duplicate = "Dupliquer";
  static String clear = "Effacer le texte";
  static const String back = 'Retour';

  static String stepCounter(int current, int total) => "Étape $current sur $total";
  static String selectDateTooltip = "Sélectionner une date";
  static String removeDateTooltip = "Supprimer la date";
  static String newFeature = "Nouveauté";

...
  static const String accompagnementIntensif = "Accompagnement intensif";
  static const String accompagnementGlobal = "Accompagnement global";
  static const String equipEmploiRecrut = "Equip emploi recrut";

  // Menu
  static String menuAccueil = "Accueil";
  static String menuMonSuivi = "Mon suivi";
  static const String menuChat = "Messages";
  static String menuSolutions = "Offres";
  static String menuFavoris = "Favoris";
  static String menuRendezvous = "Rendez-vous";
  static String menuProfil = "Mon profil";
  static String menuEvenements = "Événements";

  // Chat
  static String yourMessage = "Votre message…";
  static String yourConseiller = "Votre conseiller";
...
      ? "Créez et suivez vos actions dans le cadre des 15h d’activité"
      : "Créez et suivez vos démarches dans le cadre des 15h d’activité";
  static String firstLaunchOnboardingCardTitle3 =
      "Trouvez les offres et les événements en lien avec votre projet professionnel";

  // Entree
  static String welcome = "Bienvenue";
  static String welcomeMessage = "L’application dédiée à votre accompagnement";
  static String noAccount = "Pas de compte ?";
  static String askAccount = "Demander un compte";
  static String suiviParConseillerCej =
      "Dans le cadre de mon Contrat d'Engagement Jeune, je suis suivi par un conseiller :";
  static String suiviParConseillerPassEmploi = "Je suis suivi par un conseiller :";
...
  static String alreadyHaveAccount = "Vous avez déjà un compte\n sur cette application ?";
  static String accessibilityPartiallyConform = "Accessibilité : partiellement conforme";
  static String accessibilityNotConform = "Accessibilité : non conforme";

  // Onboarding
  static String skip = "Passer";
  static String continueLabel = "Continuer";
  static String letsGo = "C'est parti !";
  static String gotIt = "C'est compris";
  static String discover = "Découvrir";

  static String onboardingMonSuiviTitle = "Pas à pas, trouvez un emploi stable";
  static String onboardingChatTitle = "Gardez contact avec votre conseiller à tout moment";
...
      "Accédez aux réglages de votre téléphone pour vérifier que l’heure et le fuseau horaire affichés sont corrects.";
  static String loginGenericError = "Erreur lors de la connexion";
  static String loginGenericErrorDescription =
      "Réessayer plus tard. Si le problème persiste, vous pouvez contacter votre conseiller.";
  static String loginPoleEmploi = "France Travail";
  static String loginMissionLocale = "Mission Locale";
  static String loginAction = "Se connecter";
  static String logoutAction = "Se déconnecter";

  // Card and subcomponents
  static const String emploiTag = "Offre d’emploi";
  static const String alternanceTag = "Alternance";
  static const String immersionTag = "Immersion";
...

  // Accueil
  static String accueilAppBarTitle = "Bonjour";
  static String onboardingAccueilTitle = "Découvrez l’application en quelques étapes";
  static String onboardingAccueilTitleCompleted = "🎉 Vous avez terminé le tutoriel !";
  static String accueilCetteSemaineSection = "Cette semaine";
  static String accueilVoirDetailsCetteSemaine = "Voir le détail de ma semaine";
  static String accueilRendezvousSection = "Votre prochain rendez-vous";
  static String accueilActionSingular = "Action";
  static String accueilActionPlural = "Actions";
  static String accueilError = "Erreur lors de la récupération de votre page d’accueil";
  static String accueilDemarcheSingular = "Démarche";
  static String accueilDemarchePlural = "Démarches";
  static String accueilRendezvous = "Rendez-vous";
  static String accueilEvenementsSection = "Événements pouvant vous intéresser";
  static String accueilVoirLesEvenements = "Voir plus d’événements";
...
  static String pourquoiHintText = "Dites-nous pourquoi...";

  // User action form
  static const String createActionAppBarTitle = 'Créer une action';
  static const String userActionBackButton = 'Retour';
  static const String userActionNextButton = 'Continuer';
  static const String userActionFinishButton = 'Terminer';

  static const String userActionTitleStep1 = 'Catégorie';
  static const String userActionTitleStep3 = 'Statut et date';

  static const String userActionSubtitleStep1 = 'Choisissez une catégorie';

...
