appId: fr.fabrique.social.gouv.passemploi.staging
---
- tapOn: "Se connecter"
- tapOn: "pass emploi"
- tapOn: "Continuer"
- tapOn: "Nom d'utilisateur"
- inputText: ${MAESTRO_LOGIN}
- tapOn: "Mot de passe"
- inputText: ${MAESTRO_PASSWORD}
- tapOn: "Connexion"
- runFlow:
    when:
      visible: "Terminer"
    file: "tutorial.yml"
- assertVisible: "Bienvenue"