appId: fr.fabrique.social.gouv.passemploi.staging
---
- tapOn: "Se connecter"
- tapOn: "pass emploi"
- tapOn: "Continuer"
- runFlow:
    when:
      visible: "Connexion" #TODO: parce que la webview se souvient encore de l'utilisateur si on ne fait pas un "vrai" logout
    file: "login_webview.yml"
- runFlow: "tutorial.yml"
- assertVisible: "Bienvenue"